--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>5.2.0</version>
+		</dependency>
 
 
 		<dependency>
