--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 #spring.http.multipart.max-file-size=500MB
 #spring.http.multipart.max-request-size=500MB
 
-
- 
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema =public
@@ -11,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
- #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultComponentSafeNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultComponentSafeNamingStrategy
 
 #spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
@@ -19,4 +16,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 #server.contextPath=/
 
+ spring.datasource.initialization-mode=always
+
+flyway:
+  enabled: true
+  locations: classpath:db/migration
+  schemas: [public]
  
